添加审计日志

--- a/src/VehicleApp.Domain.Shared/Localization/VehicleApp/en.json
+++ b/src/VehicleApp.Domain.Shared/Localization/VehicleApp/en.json
@@ -4,6 +4,35 @@
     "AppName": "VehicleApp",
     "Menu:Home": "Home",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information visit",
-    "Welcome": "Welcome"
+    "Welcome": "Welcome",
+    "Permission:VehicleApp": "Vehicle Management",
+    "Permission:Vehicle": "Vehicle",
+    "Permission:Vehicle.Create": "Create Vehicle",
+    "Permission:Vehicle.Update": "Update Vehicle",
+    "Permission:Vehicle.Delete": "Delete Vehicle",
+    "Permission:Vehicle.UpdateMileage": "Update Mileage",
+    "Permission:Vehicle.ChangeStatus": "Change Status",
+    "Permission:MaintenanceRecord": "Maintenance Record",
+    "Permission:MaintenanceRecord.Create": "Create Maintenance Record",
+    "Permission:MaintenanceRecord.View": "View Maintenance Record",
+    "Permission:Store": "Store",
+    "Permission:Store.Create": "Create Store",
+    "Permission:Store.Update": "Update Store",
+    "Permission:Store.Delete": "Delete Store",
+    "Permission:Store.ChangeStatus": "Change Store Status",
+    "Permission:Store.Relocate": "Relocate Store",
+    "Permission:Organization": "Organization",
+    "Permission:Organization.Create": "Create Organization",
+    "Permission:Organization.Update": "Update Organization",
+    "Permission:Organization.Delete": "Delete Organization",
+    "Permission:Organization.ManageMembers": "Manage Members",
+    "Permission:VehicleManagement": "Vehicle Management",
+    "Permission:MaintenanceManagement": "Maintenance Management",
+    "Permission:StoreManagement": "Store Management",
+    "Permission:OrganizationManagement": "Organization Management",
+    "Permission:AuditLogManagement": "Audit Log Management",
+    "Permission:AuditLog": "Audit Log",
+    "Permission:AuditLog.View": "View Audit Log",
+    "Permission:AuditLog.Export": "Export Audit Log"
   }
 }
