--- a/src/VehicleApp.Domain.Shared/Localization/VehicleApp/zh-Hans.json
+++ b/src/VehicleApp.Domain.Shared/Localization/VehicleApp/zh-Hans.json
@@ -37,6 +37,35 @@
     "Unspecified": "System",
     "SeeAllUsers": "查看所有用户",
     "TakePhoto": "拍摄照片",
-    "ChoosePhoto": "选择照片"
+    "ChoosePhoto": "选择照片",
+    "Permission:VehicleApp": "车辆管理",
+    "Permission:Vehicle": "车辆",
+    "Permission:Vehicle.Create": "创建车辆",
+    "Permission:Vehicle.Update": "更新车辆",
+    "Permission:Vehicle.Delete": "删除车辆",
+    "Permission:Vehicle.UpdateMileage": "更新里程",
+    "Permission:Vehicle.ChangeStatus": "更改状态",
+    "Permission:MaintenanceRecord": "维护记录",
+    "Permission:MaintenanceRecord.Create": "创建维护记录",
+    "Permission:MaintenanceRecord.View": "查看维护记录",
+    "Permission:Store": "门店",
+    "Permission:Store.Create": "创建门店",
+    "Permission:Store.Update": "更新门店",
+    "Permission:Store.Delete": "删除门店",
+    "Permission:Store.ChangeStatus": "更改门店状态",
+    "Permission:Store.Relocate": "门店搬迁",
+    "Permission:Organization": "组织",
+    "Permission:Organization.Create": "创建组织",
+    "Permission:Organization.Update": "更新组织",
+    "Permission:Organization.Delete": "删除组织",
+    "Permission:Organization.ManageMembers": "管理成员",
+    "Permission:VehicleManagement": "车辆管理",
+    "Permission:MaintenanceManagement": "维护管理",
+    "Permission:StoreManagement": "门店管理",
+    "Permission:OrganizationManagement": "组织管理",
+    "Permission:AuditLogManagement": "审计日志管理",
+    "Permission:AuditLog": "审计日志",
+    "Permission:AuditLog.View": "查看审计日志",
+    "Permission:AuditLog.Export": "导出审计日志"
   }
 }
